--- a/index.html
+++ b/index.html
@@ -60,6 +60,15 @@
               <img src="/dev3.png" alt="dev3">
             </div>
 					</section>
+          <section class="analytics" data-auto-animate>
+						<p>Аналитика GitHub</p>
+            <img src="/diagram.png" alt="diagram">
+            <div class="devs">
+              <img src="/dev2_1.png" alt="dev1">
+              <img src="/dev2_2.png" alt="dev2">
+              <img src="/dev2_3.png" alt="dev3">
+            </div>
+					</section>
 				</section>
         <section>
           <div id="review">
